--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,10 @@ test_nonvisual
 res.txt
 TMN-main
 TaxoEnrich-main
+QEN-main
 SemEval-Noun
 SemEval-Noun.zip
+MAG-PSY.zip
+MAG_CS.zip
+SemEval-Verb.zip
+data
